// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Intro Component Intro matches the snapshot. 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="intro-heading"
    class="intro"
    id="intro"
  >
    <div
      class="intro-inner"
    >
      <header
        class="intro-header"
      >
        <p
          class="intro-eyebrow"
        >
          An American city with soul
        </p>
        <h2
          class="intro-title"
          id="intro-heading"
        >
          Welcome to the
          <span
            class="highlight"
          >
             Saint Louis
          </span>
          <br />
          experience
        </h2>
        <p
          class="intro-lead"
        >
          <span
            class="intro-lead-emphasis"
          >
            Where the Mississippi meets a city shaped by soul
          </span>
           and enduring character.
        </p>
      </header>
      <p
        class="intro-body"
      >
        From the Gateway Arch to its baseball and barbecue, experience the rhythm of the 
        <span
          class="highlight"
        >
          Gateway to the West
        </span>
        .
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Intro Component renders the intro section with correct structure 1`] = `
<div>
  <section
    aria-labelledby="intro-heading"
    class="intro"
    id="intro"
  >
    <div
      class="intro-inner"
    >
      <header
        class="intro-header"
      >
        <p
          class="intro-eyebrow"
        >
          An American city with soul
        </p>
        <h2
          class="intro-title"
          id="intro-heading"
        >
          Welcome to the
          <span
            class="highlight"
          >
             Saint Louis
          </span>
          <br />
          experience
        </h2>
        <p
          class="intro-lead"
        >
          <span
            class="intro-lead-emphasis"
          >
            Where the Mississippi meets a city shaped by soul
          </span>
           
          and enduring character.
        </p>
      </header>
      <p
        class="intro-body"
      >
        From the Gateway Arch to its baseball and barbecue, experience the rhythm of the
         
        <span
          class="highlight"
        >
          Gateway to the West
        </span>
        .
      </p>
    </div>
  </section>
</div>
`;
